OnboardingV2Minimal/force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Optional: to helps admins filter</description>
    <label>Department / Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
                <default>true</default>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Partner,</fullName>
            </value>
            <value>
                <fullName>Ops,</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>