OnboardingV2Minimal/force-app/main/default/objects/Email_Template_Catalog__mdt/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>The actual DeveloperName of the Email Template (e.g., Vendor_Welcome_Template)</description>
    <label>DeveloperName (EmailTemplate)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>