OnboardingV2Minimal/force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <description>Optional: Folder the Email Template resides in</description>
    <label>Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>