OnboardingV2Minimal/force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Sync_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_Job_ID__c</fullName>
    <description>The Id of the Sync_Log__c job that created or updated this CMDT record.</description>
    <label>Sync Job ID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>