OnboardingV2Minimal/force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>Used to store template IDs explicitly</description>
    <label>Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>